src/app/authenticated/plans-and-services/add-services/add-services.component.scss
@import '../../../../basecolors';
.add-services {
    .progress {
        margin-top:2em;
        border : 2px solid #000;
        .progress-bar {
            background-color:#ccc;
        }
    }

}
.current-service-address {
    p {
        font-weight:bold;
        margin:0;
        font-size: 1.3em;
    }

}
.new-service-address {
    //margin:3em 0;
}
.start-service-text{
    margin-left:15px;
}

.selectedPlanText {
  color: #fea220;
}

.add-services-verify-info {
    .divider-line {
        border-top: 2px solid #000;
    }

}
.featured-offers{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
   background-color: rgba(239,238,202,1.0);
  padding-top: 10px;
}
.start-date-tooltip {
    position: relative;

}
.p-plans {
  margin-left: 265px;
}

.current-plan-card {
  text-align: center;
  .mat-button {
    color:black;
  }
  .check-mark{
    margin-top:-15px;
    margin-right:-10px;
  }
}


.mat-card.current-plan-card {
  box-shadow: none;
  margin-top: 0;

  h2, .fa {
    color: rgba(46,177,52,1.0);
  }
  small .fa {
    font-size: 18px;
    font-weight: 100;
    vertical-align: super;
  }
  .fa-remove {
    font-size: 20px;
    color:black !important;
  }

  .mat-card-content {
    h2 {
      font-weight:800;
      color:#000;

    }

    .bg-default {
      background-color: #ececec;
      margin-bottom:0;
      line-height: 30px;
    }
    p {
      margin-bottom:0;
      line-height: 30px;
    }
  }

}

.mat-card.current-plan-card {
  .mat-card-title h2 {
    font-family: 'Oswald', 'Open Sans', 'AvenirNextCondensed-Bold', sans;
    font-size: 24px;
  }

  .mat-card-content {
    h2 {
      font-weight: 400;
      color: #000;
      font-family: 'Oswald', 'Open Sans', 'AvenirNextCondensed-Bold', sans;
      font-size: 50px;

    }

    small {
      font-size:20px;
      margin-left: -10px;
      color:#000;

    }
  }

}

.checkbox label:after {
  content: '';
  display: table;
  clear: both;
}

.checkbox .cr {
  position: relative;
  display: inline-block;
  border: 1px solid #a9a9a9;
  border-radius: .25em;
  width: 1.5em;
  height: 1.5em;
  margin-left: -0.8em;
  // background:#000;
}
.checkbox .cr .cr-icon {
  position: absolute;
  font-size: 1em;
  line-height: 0;
  top: 50%;
  left: 20%;
  //color:#fff;
}
.fa-check {
  color: $payment-base;

}

.checkbox label input[type="checkbox"] {
  display: none;
  padding-left:1.4em;
}

.checkbox label input[type="checkbox"] + .cr > .cr-icon {
  transform: scale(3) rotateZ(-20deg);
  opacity: 0;
  transition: all .3s ease-in;
}

.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon {
  transform: scale(1) rotateZ(0deg);
  opacity: 1;
}

.checkbox label input[type="checkbox"]:disabled + .cr{
  opacity: .5;
}
.useAddressText {
  margin-top: 10px;
  margin-left: 0px;
  padding-left: 5px;
}
@media screen and (max-width: 767px) {
  .useAddressText {
    margin-left: 0px;
  }
}

